[gd_scene load_steps=19 format=3 uid="uid://dvvptb056tr2u"]

[ext_resource type="Script" uid="uid://c1g546q1hk7ro" path="res://characters/player.gd" id="1_rj012"]
[ext_resource type="Texture2D" uid="uid://dwmbdrfg6pkc" path="res://assets/characters/mable/idle.png" id="2_3eadt"]
[ext_resource type="Texture2D" uid="uid://cnmd71kbefpks" path="res://assets/characters/mable/fall.png" id="2_n8jd0"]
[ext_resource type="Script" uid="uid://b2shq2gjd4fvt" path="res://addons/ropesim/Rope.gd" id="3_x0jl3"]
[ext_resource type="Script" uid="uid://dfppmnngy2wx4" path="res://addons/ropesim/RopeRendererLine2D.gd" id="4_evndh"]
[ext_resource type="Texture2D" uid="uid://dl6nf1vj7i4iw" path="res://assets/characters/mable/jump.png" id="4_q605b"]
[ext_resource type="Texture2D" uid="uid://qg8oqi7hfujy" path="res://assets/characters/mable/slide.png" id="5_eho78"]
[ext_resource type="Script" uid="uid://1xluodkpnre3" path="res://addons/ropesim/RopeHandle.gd" id="5_evndh"]
[ext_resource type="Texture2D" uid="uid://deqi8wvtstywf" path="res://assets/characters/mable/walk.png" id="6_8sqrr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_7eugy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n8jd0")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3eadt")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_q605b")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_eho78")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_8sqrr")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qympx"]
size = Vector2(96, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_pgjtk"]
radius = 48.0104

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tory2"]
size = Vector2(80, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3eadt"]
size = Vector2(96, 36)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c85ts"]
radius = 36.0
height = 74.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b04ul"]
size = Vector2(68, 41)

[sub_resource type="CircleShape2D" id="CircleShape2D_3eadt"]
radius = 76.99

[sub_resource type="Curve" id="Curve_evndh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.75, 1), -0.0603528, -2.58177, 0, 1, Vector2(0.989362, 0.382023), -2.58177, 0.0, 1, 0]
point_count = 3

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
floor_stop_on_slope = false
floor_constant_speed = true
floor_snap_length = 60.0
script = ExtResource("1_rj012")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(0, 35)
sprite_frames = SubResource("SpriteFrames_7eugy")
animation = &"jump"
offset = Vector2(0, -95)

[node name="CollisionFeet" type="CollisionShape2D" parent="."]
position = Vector2(0, -34)
shape = SubResource("RectangleShape2D_qympx")

[node name="CollisionHead" type="CollisionShape2D" parent="."]
position = Vector2(0, -66)
shape = SubResource("CircleShape2D_pgjtk")

[node name="CollisionStand" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionStand"]
position = Vector2(0, -52)
shape = SubResource("RectangleShape2D_tory2")

[node name="CollisionSlide" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_3eadt")
disabled = true
debug_color = Color(0.213335, 0.629567, 0.333192, 0.42)

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="WallJumpTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WallCoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="SlideDuration" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="SlideCooldown" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="HurtShape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -56)
shape = SubResource("CapsuleShape2D_c85ts")
debug_color = Color(1, 0.011095, 0.0241786, 0.42)

[node name="SlideHurtShape" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -22.5)
shape = SubResource("RectangleShape2D_b04ul")
disabled = true
debug_color = Color(1, 0.011095, 0.0241786, 0.42)

[node name="ActionableFinder" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionableFinder"]
position = Vector2(0, -64)
shape = SubResource("CircleShape2D_3eadt")

[node name="Tail" type="Node2D" parent="."]
position = Vector2(-21, -55)
script = ExtResource("3_x0jl3")
num_segments = 16
rope_length = 125.0
gravity = 50.0
damping = 1.0
render_line = false
metadata/_custom_type_script = "uid://b2shq2gjd4fvt"

[node name="RopeRendererLine2D" type="Line2D" parent="Tail"]
position = Vector2(25, 13)
points = PackedVector2Array(-25, -13, -29.7687, -6.45282, -35.1525, -0.430145, -41.4089, 4.6461, -48.6117, 8.22699, -56.5316, 9.66089, -64.5347, 8.56891, -71.9316, 5.20184, -78.4062, 0.183403, -83.9769, -5.9217, -88.7844, -12.7356, -92.976, -20.0241, -96.6733, -27.6384, -99.9699, -35.4775, -102.938, -43.468, -105.649, -51.5496, -108, -59)
width_curve = SubResource("Curve_evndh")
default_color = Color(0.74902, 0.592157, 0.482353, 1)
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource("4_evndh")
metadata/_custom_type_script = "uid://dfppmnngy2wx4"

[node name="HandleEnd" type="Marker2D" parent="Tail"]
position = Vector2(-83, -46)
script = ExtResource("5_evndh")
smoothing = true
position_smoothing_speed = 10.0
strength = 1.0
rope_path = NodePath("..")
metadata/_custom_type_script = "uid://1xluodkpnre3"

[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="timeout" from="WallJumpTimer" to="." method="_on_wall_jump_timer_timeout"]
[connection signal="timeout" from="SlideDuration" to="." method="_on_slide_duration_timeout"]
[connection signal="timeout" from="SlideCooldown" to="." method="_on_slide_cooldown_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
